force-app/main/default/objects/RE_Product__c/RE_Product__c.object-meta.xml
<CustomObject>
    <label>RE Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RE Products</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>