force-app/main/default/objects/RE_Product__c/fields/RE_Additive_Cost_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_Additive_Cost_Unit__c</fullName>
    <label>Additive Cost Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RE_Rate_Unit_Set</valueSetName>
    </valueSet>
</CustomField>