force-app/main/default/objects/RE_Product__c/fields/RE_CND_Product_Groups__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Product_Groups__c</fullName>
    <description>Revolution Canada Product Groups</description>
    <label>Canada Product Groups</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RE_CND_Product_Groups</valueSetName>
    </valueSet>
</CustomField>