force-app/main/default/objects/RE_Product__c/fields/RE_Material__c.field-meta.xml
<CustomField>
    <fullName>RE_Material__c</fullName>
    <label>Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>