force-app/main/default/objects/RE_Product__c/fields/RE_Midday_MC0_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>RE_Midday_MC0_Valid_From__c</fullName>
    <label>Midday MC0 Valid From</label>
    <type>Date</type>
</CustomField>