force-app/main/default/objects/RE_Product__c/fields/RE_Midday_MC0_Valid_To__c.field-meta.xml
<CustomField>
    <fullName>RE_Midday_MC0_Valid_To__c</fullName>
    <label>Midday MC0 Valid To</label>
    <type>Date</type>
</CustomField>