force-app/main/default/objects/RE_Product__c/fields/RE_Midday_MC0_Value__c.field-meta.xml
<CustomField>
    <fullName>RE_Midday_MC0_Value__c</fullName>
    <label>Midday MC0 Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>