force-app/main/default/objects/RE_Product__c/fields/RE_Morning_MC0_Diff__c.field-meta.xml
<CustomField>
    <fullName>RE_Morning_MC0_Diff__c</fullName>
    <label>Morning MC0 Diff</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>