force-app/main/default/objects/RE_Product__c/fields/RE_PH_Index__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_Index__c</fullName>
    <label>PH Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>