force-app/main/default/objects/RE_Product__c/fields/RE_PH_Percent_Base_Fuel__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_Percent_Base_Fuel__c</fullName>
    <label>Percent Base Fuel</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>