force-app/main/default/objects/RE_Product__c/fields/RE_Product_Classification_L0__c.field-meta.xml
<CustomField>
    <fullName>RE_Product_Classification_L0__c</fullName>
    <label>Product Classification(L0)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fuel By-Products</fullName>
            </value>
            <value>
                <fullName>Gas Oil</fullName>
            </value>
            <value>
                <fullName>Gasoline</fullName>
            </value>
            <value>
                <fullName>Kerosine</fullName>
            </value>
            <value>
                <fullName>Residual Fuel Oil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>