force-app/main/default/objects/RE_Product__c/fields/RE_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>RE_Product_Code__c</fullName>
    <label>Product Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>