force-app/main/default/objects/RE_Product__c/fields/RE_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>RE_Product_Group__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGO</fullName>
            </value>
            <value>
                <fullName>IGO</fullName>
            </value>
            <value>
                <fullName>MOGAS</fullName>
            </value>
            <value>
                <fullName>KERO</fullName>
            </value>
            <value>
                <fullName>MGO</fullName>
            </value>
            <value>
                <fullName>Marine RFO</fullName>
            </value>
            <value>
                <fullName>Fuel By-Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>