force-app/main/default/objects/RE_Product__c/fields/RE_Product_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Product_Short_Name__c</fullName>
    <label>Product Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>