force-app/main/default/objects/RE_Product__c/fields/RE_Product_Subgroup__c.field-meta.xml
<CustomField>
    <fullName>RE_Product_Subgroup__c</fullName>
    <label>Product Subgroup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGO B7</fullName>
            </value>
            <value>
                <fullName>AGO B0</fullName>
            </value>
            <value>
                <fullName>MOGAS 95</fullName>
            </value>
            <value>
                <fullName>MOGAS 97</fullName>
            </value>
            <value>
                <fullName>Kerosene</fullName>
            </value>
            <value>
                <fullName>IGO B0</fullName>
            </value>
            <value>
                <fullName>IGO B7</fullName>
            </value>
            <value>
                <fullName>IGO B10</fullName>
            </value>
            <value>
                <fullName>Dual Purpose AGO</fullName>
            </value>
            <value>
                <fullName>Gas Oil</fullName>
            </value>
            <value>
                <fullName>Gas Oil Bunker</fullName>
            </value>
            <value>
                <fullName>Hydrogen Refinery</fullName>
            </value>
            <value>
                <fullName>High Octane</fullName>
            </value>
            <value>
                <fullName>IGO</fullName>
            </value>
            <value>
                <fullName>KERO</fullName>
            </value>
            <value>
                <fullName>Low Octane</fullName>
            </value>
            <value>
                <fullName>Medium Octane</fullName>
            </value>
            <value>
                <fullName>Off-road AGO</fullName>
            </value>
            <value>
                <fullName>On-road AGO</fullName>
            </value>
            <value>
                <fullName>RFO Bunker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>