force-app/main/default/objects/RE_Product__c/fields/RE_TH_HCV_Quote1_Percent__c.field-meta.xml
<CustomField>
    <fullName>RE_TH_HCV_Quote1_Percent__c</fullName>
    <label>HCV Quote 1%</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>