force-app/main/default/objects/RE_Product__c/fields/RE_TH_Oil_Loss_Percent__c.field-meta.xml
<CustomField>
    <fullName>RE_TH_Oil_Loss_Percent__c</fullName>
    <label>Oil Loss %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>