force-app/main/default/objects/RE_Product__c/fields/RE_TH_Sales_Tax_Duty_1__c.field-meta.xml
<CustomField>
    <fullName>RE_TH_Sales_Tax_Duty_1__c</fullName>
    <label>Sales Tax/Duty-1</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>