force-app/main/default/objects/RE_Product__c/fields/RE_TH_TP_Premium__c.field-meta.xml
<CustomField>
    <fullName>RE_TH_TP_Premium__c</fullName>
    <label>TP Premium</label>
    <length>100</length>
    <type>Text</type>
</CustomField>