force-app/main/default/objects/RE_Product__c/fields/RE_TH_TP_PremiumHCV2__c.field-meta.xml
<CustomField>
    <fullName>RE_TH_TP_PremiumHCV2__c</fullName>
    <label>TH TP PremiumHCV2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>