force-app/main/default/objects/RE_Product__c/fields/RE_TH_TP_PremiumHCV__c.field-meta.xml
<CustomField>
    <fullName>RE_TH_TP_PremiumHCV__c</fullName>
    <inlineHelpText>Value should be (HCV1:HCV2) EX: 20.46 :2.68, 0:0</inlineHelpText>
    <label>TH TP PremiumHCV1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>