force-app/main/default/objects/RE_Product__c/fields/RT_Description__c.field-meta.xml
<CustomField>
    <fullName>RT_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>