force-app/main/default/objects/RE_Product__c/fields/RT_Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>RT_Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product</label>
    <referenceTo>RE_Product__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>