force-app/main/default/objects/RE_Product__c/fields/RT_Parent_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>RT_Parent_Product_Code__c</fullName>
    <formula>RT_Parent_Product__r.RT_Product_Code__c</formula>
    <label>Parent Product Code</label>
    <type>Text</type>
</CustomField>