force-app/main/default/objects/RE_Product__c/fields/RT_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>RT_Product_Code__c</fullName>
    <label>Product Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>