force-app/main/default/objects/RE_Product__c/fields/RT_Product_Grade__c.field-meta.xml
<CustomField>
    <fullName>RT_Product_Grade__c</fullName>
    <formula>RT_Parent_Product__r.RT_Parent_Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Grade</label>
    <type>Text</type>
</CustomField>