force-app/main/default/objects/RE_Product__c/fields/RT_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>RT_Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Product Grade</fullName>
            </value>
            <value>
                <fullName>Product Sub-grade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>