force-app/main/default/objects/RE_Product__c/fields/TH_TP_PremiumHCV2_UNIT__c.field-meta.xml
<CustomField>
    <fullName>TH_TP_PremiumHCV2_UNIT__c</fullName>
    <label>TH TP PremiumHCV2 UNIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD/BBL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>