force-app/main/default/objects/RE_Product__c/fields/TP_Premium_Unit__c.field-meta.xml
<CustomField>
    <fullName>TP_Premium_Unit__c</fullName>
    <label>TP Premium Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RE_Rate_Unit_Set</valueSetName>
    </valueSet>
</CustomField>