force-app/main/default/objects/RE_Product__c/recordTypes/Turkey.recordType-meta.xml
<RecordType>
    <fullName>Turkey</fullName>
    <active>true</active>
    <description>This record type is to be used by Turkey</description>
    <label>Turkey</label>
</RecordType>