force-app/main/default/objects/RE_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RE_Product_Group__c</columns>
    <columns>RE_Product_Subgroup__c</columns>
    <columns>RE_Product_Code__c</columns>
    <columns>RE_Additive_Cost__c</columns>
    <columns>RE_Additive_Cost_Unit__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>RE_Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>RE_Product__c.Singapore</value>
    </filters>
    <label>All</label>
</ListView>