force-app/main/default/objects/RE_Product__c/listViews/Canada_Materials.listView-meta.xml
<ListView>
    <fullName>Canada_Materials</fullName>
    <columns>RT_Product_Code__c</columns>
    <columns>NAME</columns>
    <columns>RT_Description__c</columns>
    <columns>RE_CND_Product_Groups__c</columns>
    <columns>RE_Product_Classification_L0__c</columns>
    <columns>RE_Product_Group__c</columns>
    <columns>RE_Product_Subgroup__c</columns>
    <columns>RE_Country_Name__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Product__c.Canada</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>B20</value>
    </filters>
    <label>Canada Materials</label>
    <sharedTo>
        <territoryAndSubordinates>Revolution_Territory.Canada</territoryAndSubordinates>
    </sharedTo>
</ListView>