force-app/main/default/objects/RE_Product__c/listViews/Copy_of_Philippines.listView-meta.xml
<ListView>
    <fullName>Copy_of_Philippines</fullName>
    <columns>NAME</columns>
    <columns>RE_PH_Percent_Base_Fuel__c</columns>
    <columns>RE_Material__c</columns>
    <columns>RE_Additive_Cost_Unit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RE_Additive_Cost__c</columns>
    <columns>RE_Country__c</columns>
    <columns>RE_Product_Code__c</columns>
    <columns>RE_Product_Group__c</columns>
    <columns>RE_PH_Index__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Product__c.Philippines</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Diesoline 10ppm B0,Diesoline 10ppm B2,MGO 10ppm B2,FuelSave Diesel,V- Power Diesel</value>
    </filters>
    <label>Copy of Philippines</label>
</ListView>