force-app/main/default/objects/RE_Product__c/listViews/Malaysia_and_Singapore.listView-meta.xml
<ListView>
    <fullName>Malaysia_and_Singapore</fullName>
    <columns>NAME</columns>
    <columns>RE_Product_Group__c</columns>
    <columns>RE_Product_Subgroup__c</columns>
    <columns>RE_Material__c</columns>
    <columns>RE_Product_Short_Name__c</columns>
    <columns>RE_Additive_Cost__c</columns>
    <columns>RE_Additive_Cost_Unit__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>RE_Country__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Product__c.Malaysia</value>
    </filters>
    <label>Malaysia and Singapore</label>
    <sharedTo>
        <territory>Revolution_Territory.Malaysia</territory>
        <territory>Revolution_Territory.Singapore</territory>
    </sharedTo>
</ListView>